can search test messages as well now

--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_BdqUW">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_XkmOX">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties" id="properties_eH29W">
+        <div class="suite__properties" id="properties_X8CSu">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_G8sgQ class="properties">
+        <div id=properties_IdV3Q class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_3pQ81>
+            <tr id=property_w8uGA>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_x1trD>
+<tr id=property_SOaim>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_e9jzC>
+<tr id=property_unjXd>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_yTzfp>
+<tr id=property_8F6yZ>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_nOPjD class="properties">
+<div id=properties_rSGNW class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_uZZa7>
+            <tr id=property_mMiAB>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,28 +1411,28 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_ZYyPh">
+        <div class="suite__tests"><div class="test" id="test_mAEoF">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">TIME: 0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_b8MHv" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_WSiOt" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_Ud9FK" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_XJQ5h" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_bD4vb">
+<div class="test" id="test_Yl0gi">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">TIME: 0.012011200000000001</span>
     </button>
-    <div id="message_GcZv1" class="test__message--single">FILENAME:XX
+    <div id="message_Yi4Cq" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_vM4Du">
+<div class="test" id="test_HRE17">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">TIME: 0.000625</span>
@@ -1440,19 +1440,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_VfXHr">
+<div class="test" id="test_u4rSX">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">TIME: 0</span>
     </button>
-    <div class="test__messages"><div id="message_lp0Qj" class="test__message">This is a message</div>
-<div id="message_3eaMI" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_guxpw" class="test__message">This is a message</div>
+<div id="message_G8Ouc" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_BdqUW","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_eH29W","values":[{"id":"properties_G8sgQ","props":[{"name":"flag-type","value":"bug","id":"property_3pQ81"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_x1trD"},{"name":"Has a name","value":"true","id":"property_e9jzC"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_yTzfp"}]},{"id":"properties_nOPjD","props":[{"name":"even","value":"more","id":"property_uZZa7"}]}]},"testCases":[{"id":"test_ZYyPh","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_b8MHv","message":"java.lang.RuntimeException: There was an error"},{"id":"message_WSiOt","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_bD4vb","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_GcZv1","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_vM4Du","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_VfXHr","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_lp0Qj","message":"This is a message"},{"id":"message_3eaMI","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_XkmOX","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_X8CSu","values":[{"id":"properties_IdV3Q","props":[{"name":"flag-type","value":"bug","id":"property_w8uGA"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_SOaim"},{"name":"Has a name","value":"true","id":"property_unjXd"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_8F6yZ"}]},{"id":"properties_rSGNW","props":[{"name":"even","value":"more","id":"property_mMiAB"}]}]},"testCases":[{"id":"test_mAEoF","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_Ud9FK","message":"java.lang.RuntimeException: There was an error"},{"id":"message_XJQ5h","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_Yl0gi","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_Yi4Cq","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_HRE17","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_u4rSX","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_guxpw","message":"This is a message"},{"id":"message_G8Ouc","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
@@ -1627,7 +1627,14 @@ var cta = {
                 var isNotHidden = testElement.className.indexOf('hide--searching') === -1
                 if (value === '')
                     testElement.className = testElement.className.replace(' hide--searching', '')
-                else if (test.name.toUpperCase().indexOf(value) !== -1)
+                else if (test.messages) {
+                    test.messages.forEach(function(message) {
+                        if (message.message.toUpperCase().indexOf(value) !== -1)
+                            testElement.className = testElement.className.replace(' hide--searching', '')
+                        else if (isNotHidden)
+                            testElement.className = testElement.className + ' hide--searching'
+                    })
+                } else if (test.name.toUpperCase().indexOf(value) !== -1)
                     testElement.className = testElement.className.replace(' hide--searching', '')
                 else if (isNotHidden)
                     testElement.className = testElement.className + ' hide--searching'
