--- a/single_file.html
+++ b/single_file.html
@@ -1348,7 +1348,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="suite_XkmOX">
+    <div class="row offset-by-one ten columns"><div class="suite" id="suite_t9XLg">
     <button class="suite--failure u-full-width flat" onclick="cta.contract.local.suite(this.parentElement)">
         <span class="suite__name u-pull-left">Multi</span>
         <span class="suite__info u-pull-right">tests: 3</span>
@@ -1356,12 +1356,12 @@ there.
         <span class="suite__info u-pull-right">time: 0.0160106</span>
     </button>
     <div class="suite__contents">
-        <div class="suite__properties" id="properties_X8CSu">
+        <div class="suite__properties" id="properties_KyDaw">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">MULTIPLE PROPERTIES</span>
     </button>
     <div class="properties__list">
-        <div id=properties_IdV3Q class="properties">
+        <div id=properties_rDQI3 class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1371,19 +1371,19 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_w8uGA>
+            <tr id=property_KQ8KX>
     <td><b>flag-type</b></td>
     <td>bug</td>
 </tr>
-<tr id=property_SOaim>
+<tr id=property_MCgoL>
     <td><b>flag-content</b></td>
     <td>APPLICATION DEFECT</td>
 </tr>
-<tr id=property_unjXd>
+<tr id=property_pXS2u>
     <td><b>Has a name</b></td>
     <td>true</td>
 </tr>
-<tr id=property_8F6yZ>
+<tr id=property_26XSk>
     <td><b>URL</b></td>
     <td>&#x2F;hunter&#x2F;overall_test.go</td>
 </tr>
@@ -1391,7 +1391,7 @@ there.
     </table>
 </div>
 
-<div id=properties_rSGNW class="properties">
+<div id=properties_9bNq7 class="properties">
     <button class="properties__title u-full-width" onclick="cta.contract.local.properties(this.parentElement)">
         <span class="u-pull-left">Properties</span>
     </button>
@@ -1401,7 +1401,7 @@ there.
             <th>VALUE</th>
         </thead>
         <tbody>
-            <tr id=property_mMiAB>
+            <tr id=property_5yg9k>
     <td><b>even</b></td>
     <td>more</td>
 </tr>
@@ -1411,28 +1411,28 @@ there.
 
     </div>
 </div>
-        <div class="suite__tests"><div class="test" id="test_mAEoF">
+        <div class="suite__tests"><div class="test" id="test_pue63">
     <button class="test__name test--error u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">TIME: 0.00075</span>
     </button>
-    <div class="test__messages"><div id="message_Ud9FK" class="test__message">java.lang.RuntimeException: There was an error</div>
-<div id="message_XJQ5h" class="test__message">java.lang.RuntimeException: There was an error</div></div>
+    <div class="test__messages"><div id="message_1kZ5T" class="test__message">java.lang.RuntimeException: There was an error</div>
+<div id="message_8JneL" class="test__message">java.lang.RuntimeException: There was an error</div></div>
 </div>
 
-<div class="test" id="test_Yl0gi">
+<div class="test" id="test_gT3EG">
     <button class="test__name test--failure u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">TIME: 0.012011200000000001</span>
     </button>
-    <div id="message_Yi4Cq" class="test__message--single">FILENAME:XX
+    <div id="message_EfHcs" class="test__message--single">FILENAME:XX
 Expected
     <string>: Luke
 to equal
     <string>: luke</div>
 </div>
 
-<div class="test" id="test_HRE17">
+<div class="test" id="test_dcZ80">
     <button class="test__name test--passed u-full-width " onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">TIME: 0.000625</span>
@@ -1440,19 +1440,19 @@ to equal
     
 </div>
 
-<div class="test" id="test_u4rSX">
+<div class="test" id="test_lyryw">
     <button class="test__name test--skipped u-full-width flat" onclick="cta.contract.local.test(this.parentElement)">
         <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">TIME: 0</span>
     </button>
-    <div class="test__messages"><div id="message_guxpw" class="test__message">This is a message</div>
-<div id="message_G8Ouc" class="test__message">This is a message</div></div>
+    <div class="test__messages"><div id="message_dE9Q1" class="test__message">This is a message</div>
+<div id="message_HYadX" class="test__message">This is a message</div></div>
 </div>
 </div>
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = [{"id":"suite_XkmOX","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_X8CSu","values":[{"id":"properties_IdV3Q","props":[{"name":"flag-type","value":"bug","id":"property_w8uGA"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_SOaim"},{"name":"Has a name","value":"true","id":"property_unjXd"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_8F6yZ"}]},{"id":"properties_rSGNW","props":[{"name":"even","value":"more","id":"property_mMiAB"}]}]},"testCases":[{"id":"test_mAEoF","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_Ud9FK","message":"java.lang.RuntimeException: There was an error"},{"id":"message_XJQ5h","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_Yl0gi","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_Yi4Cq","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_HRE17","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_u4rSX","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_guxpw","message":"This is a message"},{"id":"message_G8Ouc","message":"This is a message"}]}]}]
+    <script type="text/javascript">var suites = [{"id":"suite_t9XLg","type":"failure","name":"Multi","time":"0.0160106","tests":"3","failures":"1","properties":{"id":"properties_KyDaw","values":[{"id":"properties_rDQI3","props":[{"name":"flag-type","value":"bug","id":"property_KQ8KX"},{"name":"flag-content","value":"APPLICATION DEFECT","id":"property_MCgoL"},{"name":"Has a name","value":"true","id":"property_pXS2u"},{"name":"URL","value":"/hunter/overall_test.go","id":"property_26XSk"}]},{"id":"properties_9bNq7","props":[{"name":"even","value":"more","id":"property_5yg9k"}]}]},"testCases":[{"id":"test_pue63","time":"0.00075","name":"Is An Error","type":"error","messages":[{"id":"message_1kZ5T","message":"java.lang.RuntimeException: There was an error"},{"id":"message_8JneL","message":"java.lang.RuntimeException: There was an error"}]},{"id":"test_gT3EG","time":"0.012011200000000001","name":"It Is A Failure","type":"failure","messages":[{"id":"message_EfHcs","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke"}]},{"id":"test_dcZ80","time":"0.000625","name":"It Is A Pass","type":"passed"},{"id":"test_lyryw","time":"0","name":"It Is Skipped","type":"skipped","messages":[{"id":"message_dE9Q1","message":"This is a message"},{"id":"message_HYadX","message":"This is a message"}]}]}]
 function createToggleDisplay(by) {
     return function(element) {
         var isHidden = element.className.indexOf(' hide--' + by) !== -1
@@ -1643,7 +1643,20 @@ var cta = {
         properties: function(value) {
             value = value.toUpperCase()
             forEachProperties(function(properties) {
-                console.log(properties)
+                properties.values.forEach(function(propertiesValue) {
+                    propertiesValue.props.forEach(function(prop) {
+                        var propElement = document.getElementById(prop.id)
+                        var isNotHidden = propElement.className.indexOf('hide--searching') === -1
+                        if (value === '')
+                            propElement.className = propElement.className.replace(' hide--searching', '')
+                        else if(prop.name.toUpperCase().indexOf(value) !== -1)
+                            propElement.className = propElement.className.replace(' hide--searching', '')
+                        else if(prop.value.toUpperCase().indexOf(value) !== -1)
+                            propElement.className = propElement.className.replace(' hide--searching', '')
+                        else if(isNotHidden)
+                            propElement.className = propElement.className + ' hide--searching'
+                    })
+                })
             })
         }
     }
