--- a/index.html
+++ b/index.html
@@ -1024,8 +1024,11 @@ there.
         <div class="row">
             <h2>Install It</h2>
             <code>
-            npm install -g junit_viewer
-        </code>
+                npm install -g junit_viewer
+            </code>
+            <br/>
+            <br/>
+            <a href="https://www.npmjs.com/package/junit-viewer">Find this project on NPM</a>
         </div>
         <div class="row">
             <h2><br />Run It</h2>
