moving demos and updating readme and index

--- a/index.html
+++ b/index.html
@@ -1054,11 +1054,23 @@ there.
             <code>var parsedAndRenderedData = jv.junit_viewer('fileOrFolderLocation')</code>
         </div>
         <div class="row">
-            <h2><br/>Demos</h2>
-            <ul>
-                <li><a href="./demos/data.html">A mix of all kinds of tests</a></li>
-                <li><a href="./demos/single.html">An example of a single file</a></li>
-            </ul>
+            <h2><br/>Code Documentation</h2>
+            <p>Using Junit Viewer's very own unit tests (using a single file result)</p>
+            <a href="./junit_viewer_specs.html">A mix of all kinds of tests</a>
+        </div>
+        <div class="row">
+            <h2><br/>Demo</h2>
+            <p>Using Junit Viewer's very own unit tests (using a folder of results)</p>
+            <a href="./demo.html">A mix of all kinds of tests</a>
+        </div>
+        <div class="row">
+            <h2><br/>Contributions</h2>
+            <p>If you wish to contribute then you can either create an issue or fork it and create a PR</p>
+            <p>When developing all you need to do is</p>
+            <code>npm i</code>
+            <p><br/>And to run the tests</p>
+            <code>npm test</code>
+            <p><br/>The testing strategy is an integration test and not a conventional unit test</p>
         </div>
     </div>
 </body>
