--- a/index.html
+++ b/index.html
@@ -999,6 +999,10 @@ there.
                         <td>You don't need to have a whole folder of files in order to view your results (trke all other junit viewers)</td>
                     </tr>
                     <tr>
+                        <td><b>Shows HTML output</b></td>
+                        <td>This tool will show HTML in your test messages, meaning it is a great test snapshot tool to show images</td>
+                    </tr>
+                    <tr>
                         <td><b>Using Express to start a server</b></td>
                         <td>Means you can just hit refresh and you have your latest tests instead of re-running Junit Viewer</td>
                     </tr>
