--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@ there.
                     </tr>
                     <tr>
                         <td><b>Search</b></td>
-                        <td>It comes with a search box so you can search your suites and tests and test messages but also properties, it uses matching similar to Sublime e.g 'HW' would match against 'HelloWorld' (so would 'hw') and you can also search using regex e.g. 'h(.*)' would match against 'HelloWorld'</td>
+                        <td>It comes with a search box so you can search your suites and tests and test messages but also properties, it uses matching similar to Sublime e.g 'HW' would match against 'HelloWorld' (so would 'hw') and you can also search using regex e.g. 'h(.*)' would match against 'HelloWorld' or you can use a glob search e.g. '*world' would match against 'hello world'</td>
                     </tr>
                     <tr>
                         <td><b>Skeleton</b></td>
