--- a/index.html
+++ b/index.html
@@ -1038,6 +1038,8 @@ there.
             <h2><br />Run It</h2>
             <p>If you just want to log to the terminal</p>
             <code>junit_viewer --results=file_or_folder_location</code>
+            <p>By default it will just set the results folder to the current directory so you could just run</p>
+            <code>junit_viewer</code>
             <p><br/>If you want to save it to a file</p>
             <code>junit_viewer --results=file_or_folder_location --save=file_location.html</code>
             <p><br/>If you want to start a server</p>
