--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ there.
         <div class="row">
             <h2>Install It</h2>
             <code>
-                npm install -g junit_viewer
+                npm install -g junit-viewer
             </code>
             <br/>
             <br/>
@@ -1037,21 +1037,21 @@ there.
         <div class="row">
             <h2><br />Run It</h2>
             <p>If you just want to log to the terminal</p>
-            <code>junit_viewer --results=file_or_folder_location</code>
+            <code>junit-viewer --results=file_or_folder_location</code>
             <p>By default it will just set the results folder to the current directory so you could just run</p>
-            <code>junit_viewer</code>
+            <code>junit-viewer</code>
             <p><br/>If you want to save it to a file</p>
-            <code>junit_viewer --results=file_or_folder_location --save=file_location.html</code>
+            <code>junit-viewer --results=file_or_folder_location --save=file_location.html</code>
             <p><br/>If you want to start a server</p>
-            <code>junit_viewer --results=file_or_folder_location --port=port_number</code>
+            <code>junit-viewer --results=file_or_folder_location --port=port_number</code>
             <p><br/>By default it is minified but if you don't want it minified</p>
-            <code>junit_viewer --results=file_or_folder_location --minify=false</code>
+            <code>junit-viewer --results=file_or_folder_location --minify=false</code>
         </div>
         <div class="row">
             <h2><br />Using the API</h2>
-            <code>npm install --save-dev junit_viewer</code>
+            <code>npm install --save-dev junit-viewer</code>
             <br/>
-            <code>var jv = require('junit_viewer')</code>
+            <code>var jv = require('junit-viewer')</code>
             <br />
             <code>var parsedData = jv.parse('fileOrFolderLocation')</code>
             <br />
