Added documentation on multiple template in index.html

--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,8 @@ there.
             <code>junit-viewer --results=file_or_folder_location --port=port_number</code>
             <p><br/>By default it is minified but if you don't want it minified</p>
             <code>junit-viewer --results=file_or_folder_location --minify=false</code>
+            <p><br/>Change the template used for render</p>
+            <code>junit-viewer --results=file_or_folder_location --template=bootstrap</code>
         </div>
         <div class="row">
             <h2><br />Using the API</h2>
@@ -1068,6 +1070,8 @@ there.
             <h2><br/>Demo</h2>
             <p>Using Junit Viewer's very own unit tests (using a folder of results)</p>
             <a href="./demo.html">A mix of all kinds of tests</a>
+            <br />
+            <a href="./demo_bootstrap_template.html">A mix of all kinds of tests rendered with the bootstrap template</a>
         </div>
         <div class="row">
             <h2><br/>Contributions</h2>
