--- a/index.html
+++ b/index.html
@@ -980,6 +980,8 @@ there.
     <div class="container">
         <div class="row">
             <h1>Junit Viewer</h1>
+            <p style='padding: 5px; background-color: red;'>Junit Viewer is no longer maintained</p>
+            <p>Please use the feature-rich <a href='https://www.npmjs.com/package/xunit-viewer'>Xunit Viewer</a></p> instead
             <p>Junit Viewer is a very simple yet powerful way of viewing your xunit results</p>
         </div>
         <div class="row">
